--- a/cliente/src/app/pages/home/home.component.html
+++ b/cliente/src/app/pages/home/home.component.html
@@ -7,6 +7,7 @@
       class="img-fluid"
       style="width: 1000px"
     />
+    <div class="bg-info-subtle p-4 rounded mt-4">
     <h3 class="mt-4">
       Un refugio lleno de amor y esperanza para nuestros peludos amigos.
     </h3>
@@ -25,17 +26,13 @@
       fondos.
     </p>
   </div>
+  </div>
 
   <div class="row">
-    <img
-      src="https://scontent.fclq2-1.fna.fbcdn.net/v/t39.30808-6/503386202_3022537277928524_6074927001183214956_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=cf85f3&_nc_eui2=AeHC-1tysg8xH7rYOujVN9YvVhGtzogwh2BWEa3OiDCHYIIeMQsZS3SKStJPN8Guf0jf5imgvCTv0ZQboVCNEYRR&_nc_ohc=EvNzjpzT0FUQ7kNvwEdsUwM&_nc_oc=Adn5oR-IBLzr_fzI_lQ6bRmLyNnnLqeGt3T0dBvJ1SxfLyZxARJE4uLlqGTveMlPukLh60PvYViPCsEsZevjEBUV&_nc_zt=23&_nc_ht=scontent.fclq2-1.fna&_nc_gid=ETdHF-W30daWfYsZNldL2Q&oh=00_AffikwjfkOHqcrBwFdqD7lQsSvayhZAFlYEtO06zgF8_qw&oe=68FDCCF6"
-      alt="Misión"
-      class="img-fluid"
-      style="max-width: 600px"
-    />
     <div class="col-md-6">
+    <div>
       <h3 class="mt-4">Nuestra misión</h3>
-      <p class="mt-4">
+      <p>
         Proteger y rescatar perros en situación de abandono o maltrato,
         brindándoles refugio, atención veterinaria y un ambiente amoroso
         mientras trabajamos activamente para encontrarles hogares permanentes y
@@ -45,7 +42,16 @@
       </p>
     </div>
 
-    <div class="col-md-6">
+    <img
+    src="https://scontent.fclq2-1.fna.fbcdn.net/v/t39.30808-6/482979566_2937183199797266_2133280478203303045_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeHDyYsZd9iHyjVkpMt7KxVQl2KCWNqWv3uXYoJY2pa_e2OxPhStXNnzq-H37VCA-3S131vMcMNgtqVaxpm1beSj&_nc_ohc=yB_B1gaEA8gQ7kNvwHNj3r3&_nc_oc=AdnyLRyoVl7kyIO4AztLeYM88Fy6Dy_a7bofY3zvbzaYfTljIcwbzOqC-fIL1YLUcmn--oLd0IPLB5NiUpLxMM9I&_nc_zt=23&_nc_ht=scontent.fclq2-1.fna&_nc_gid=R71Fx05KEM2rqHlGeC6dbQ&oh=00_AfcTuF66yRcZqHPoRe-MqnwZwLP-H6zzXvgIyYz9d_hq0w&oe=690879A9"
+    alt="Misión"
+    class="img-fluid"
+    style="max-width: 600px"
+  />
+  </div>
+
+  <div class="col-md-6">
+    <div>
       <h3 class="mt-4">Nuestra visión</h3>
       <p>
         Ser un referente en el rescate y rehabilitación de perros vulnerables,
@@ -57,7 +63,7 @@
     </div>
 
     <img
-      src="https://scontent.fclq2-1.fna.fbcdn.net/v/t39.30808-6/476158832_918834343752386_3929474663751726543_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeFUWWxGQSneXaNURl0n3kB6dWTIYpmCPJN1ZMhimYI8k_40I6E4dq-xvKAD4Cs7KqGDBjeUQUJra9_5LCLPITFz&_nc_ohc=aEOfzOzMSrsQ7kNvwEwsw5y&_nc_oc=AdkyoiPhfrrJFL0RdyJd6ZvahSOE0Q92Chs00Jdz_IyupI9xyEEbX7BM1MqtzPi_k79BIlP-TXVAYroCrS0F12ya&_nc_zt=23&_nc_ht=scontent.fclq2-1.fna&_nc_gid=ycjtbfihuG5Z_VMlWO425A&oh=00_AfdnSROkloHe7_rYKy0D7c41AAODKM8f5toJCPaNte6fOQ&oe=68FF0E79"
+      src="https://scontent.fclq2-1.fna.fbcdn.net/v/t1.6435-9/70300413_1363818113800457_4889103569598283776_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=3a1ebe&_nc_eui2=AeFN2F5dL2oXwgvXil-x5n0tVIP3DWnEJ45Ug_cNacQnjmiT25r0qkxBliCv-bXw8-qeWeMnA-U24bHZIfvc7tLu&_nc_ohc=rYJLLhOcr-IQ7kNvwGVRGN7&_nc_oc=AdmXzskXIZ1K4iEFTUA--KKtJ9b4LZLqHkNrcGPdvaJTVubaTyEeaTqbDUKcOsMXGw3mQuoyTPki1N17xy4gb1i9&_nc_zt=23&_nc_ht=scontent.fclq2-1.fna&_nc_gid=awxQrLRhzMKClIEm2Ay-cA&oh=00_Afdjffow0i7FUab57YeFWPpO3Xhnxp1Ll49qIbAIYgAqgQ&oe=692A2656"
       alt="Se responsabiliza"
       class="img-fluid"
       style="max-width: 600px"
