some styles added

--- a/cliente/src/app/app.component.html
+++ b/cliente/src/app/app.component.html
@@ -1,5 +1,5 @@
 <body>
     <app-navbar></app-navbar>
     <router-outlet />
-    <app-footer class="ms-2"></app-footer>
+    <app-footer></app-footer>
 </body>
