--- a/cliente/src/app/shared/footer/footer.component.html
+++ b/cliente/src/app/shared/footer/footer.component.html
@@ -1,5 +1,5 @@
-<footer class="bg-info d-flex justify-content-between align-items-center p-3">
-    <a class="navbar-brand ms-2 mb-0 text-white">RESCUE, REHABILITATE & REHOME</a>
+<footer class="bg-info d-flex justify-content-between align-items-center p-3 fixed-bottom">
+    <a class="navbar-brand ms-2 mb-0 text-white">RESCUE, REHABILITATE & REHOME!!!</a>
     <ul class="d-flex list-unstyled justify-content-center align-items-center gap-3 mb-0">
       <li>
         <a href="https://www.youtube.com/@rivierarescue5992">
