--- a/cliente/src/app/pages/login/login.component.html
+++ b/cliente/src/app/pages/login/login.component.html
@@ -32,7 +32,7 @@
 </div>
 
 <div class="container mt-5 col-md-6 text-center align" style="max-width: 400px;">
-    <h2 class="mb-4 text-center">Si aún no tienes una cuenta, crea una aquí</h2>
+    <h2 class="mb-4 text-center">Registrate pata adoptar y ayudar!</h2>
   <button type="button" class="btn btn-primary" routerLink="/registro" routerLinkActive="active">Registrarse</button>
 </div>
 </div>
